The first round of rebranding.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 
-Sving2 is based on the Primstar2 original code written by Domino Marama and Gaia Clary.
+MoMoSculpt is based on the Primstar2 original code written by Domino Marama and Gaia Clary.
 (http://blog.machinimatrix.org/primstar-2/)
 
 Maintenance, merging, source repository administration by Soraya Elcar.
